[gd_scene load_steps=5 format=3 uid="uid://cpw5ouvraljqn"]

[ext_resource type="PackedScene" uid="uid://d2uo0ynslvkp6" path="res://Scenes/Tilemaps/tile_map.tscn" id="1_2m1kb"]
[ext_resource type="Script" path="res://Scripts/Rooms/start_room.gd" id="1_mhrdv"]
[ext_resource type="PackedScene" uid="uid://bc884qfo76yo4" path="res://Scenes/Props/door.tscn" id="2_01m2i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ugi2s"]
size = Vector2(51, 40)

[node name="StartRoom0" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_mhrdv")
metadata/_edit_lock_ = true

[node name="TileMap" parent="." instance=ExtResource("1_2m1kb")]
layer_0/tile_data = PackedInt32Array(65537, 524288, 4, 131073, 196608, 1, 65538, 524288, 4, 65539, 524288, 4, 196609, 196608, 1, 262145, 196608, 1, 327681, 196608, 1, 393217, 196608, 1, 131074, 196608, 1, 196610, 196608, 1, 262146, 196608, 1, 327682, 196608, 1, 393218, 196608, 1, 131075, 196608, 1, 196611, 196608, 1, 262147, 196608, 1, 327683, 196608, 1, 393219, 196608, 1, 458755, 196608, 1, 65540, 524288, 4, 131076, 196608, 1, 196612, 196608, 1, 262148, 131072, 1, 327684, 196608, 1, 393220, 196608, 1, 458756, 196608, 1, 524292, 131072, 1, 5, 131072, 1, 65541, 131072, 1, 131077, 196608, 1, 196613, 196608, 1, 262149, 131072, 1, 327685, 196608, 1, 393221, 196608, 1, 524293, 196608, 1, 6, 131072, 1, 65542, 131072, 1, 131078, 196608, 1, 196614, 196608, 1, 262150, 196608, 1, 327686, 196608, 1, 393222, 196608, 1, 458758, 196608, 1, 524294, 196608, 1, 65543, 524288, 4, 131079, 196608, 1, 196615, 196608, 1, 262151, 196608, 1, 327687, 196608, 1, 393223, 131072, 1, 458759, 196608, 1, 65544, 524288, 4, 131080, 196608, 1, 196616, 196608, 1, 262152, 196608, 1, 327688, 196608, 1, 393224, 196608, 1, 65545, 524288, 4, 131081, 196608, 1, 196617, 196608, 1, 262153, 196608, 1, 327689, 196608, 1, 393225, 196608, 1, 458757, 65536, 3)
layer_1/tile_data = PackedInt32Array(65539, 196608, 0, 65544, 262144, 1)

[node name="TileMap2" parent="." instance=ExtResource("1_2m1kb")]
z_index = 2
layer_0/tile_data = PackedInt32Array(196608, 262144, 5, 65536, 262144, 5, 131072, 262144, 5, 262144, 262144, 5, 327680, 262144, 5, 393216, 262144, 6, 393217, 131072, 6, 393218, 327680, 6, 458754, 262144, 6, 458755, 327680, 6, 524291, 262144, 6, 524292, 131072, 6, 524293, 131072, 6, 524294, 131072, 6, 458759, 65536, 6, 524295, 196608, 6, 393224, 65536, 6, 458760, 196608, 6, 393225, 131072, 6, 10, 196608, 4, 65546, 196608, 5, 131082, 196608, 5, 196618, 196608, 5, 262154, 196608, 5, 327690, 196608, 5, 393226, 196608, 6, 5, 458752, 6, 6, 524288, 6, 0, 262144, 4, 1, 131072, 7, 2, 131072, 7, 3, 131072, 7, 9, 131072, 7, 8, 131072, 7, 4, 327680, 7, 7, 65536, 7)

[node name="Doors" type="Node2D" parent="."]

[node name="Door" parent="Doors" instance=ExtResource("2_01m2i")]
position = Vector2(96, 16)

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(96, 53)
shape = SubResource("RectangleShape2D_ugi2s")

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(100, 120)

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
